post description alignment fix

--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -38,7 +38,6 @@
     }
     font-size: 1.25rem;
     margin: 2rem;
-    max-width: 60rem;
     text-align: left;
   }
 }
